# trtllm-serve

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  base.yml  export.py  generation.cpp  generation.hpp  infer.cpp  llava_vision_pth.py  llava_vision_trt.py  main.cpp  main.py  serve.cpp  utils.py
common/: utils.py
cpp_scripts/: CMakeLists.txt  llm_infer.cpp  main.cpp  offline_infer.cpp  online_infer.cpp  server.sh
cpp_scripts/include/: logger.hpp  session.hpp
cpp_scripts/src/: logger.cpp  session.cpp  session.hpp
docs/: executor.md
multimodal/llava/: llava_vision_onnx.py  llava_vision_pth.py  llava_vision_trt.py
py_scripts/: args.py  base.yml  build_helper.py  export.py
py_scripts/src/: args.py  build_helper.py
scripts/: base.yml  build.py  config.py  convert_checkpoint.py  export_engine.py  process_inputs.py  run.py  running_pipe.py  utils.py
scripts/src/: args.py  build_helper.py
src/: types.h
src/trtllm_src/: trtllm_session.cpp  trtllm_session.h
src/utils/: args_utils.cpp  args_utils.h  common_utils.cpp  common_utils.h  log_utils.cpp  log_utils.h  string_utils.cpp  string_utils.h
tllm/: args.py  build_helper.py
